<resources>
    <string name="app_name">Elephant Tribe</string>
    <string name="app_sub_name" translatable="true">Memory Builder</string>
    <string name="action_settings">Settings</string>

    <!-- Tag Keys -->
    <string name="tag_position" translatable="false">tag_position</string>
    <string name="tag_item" translatable="false">tag_item</string>
    <string name="tag_boom" translatable="false">tag_boom</string>

    <!-- BoomMenuButton Default values -->
    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>

    <!-- Deck Boom Menu Names -->
    <string name="bm_edit" translatable="true">Edit Deck</string>
    <string name="bm_leitner" translatable="true">Leitner Method</string>
    <string name="bm_flashcard" translatable="false">@string/flashcards</string>
    <string name="bm_stats" translatable="false">@string/stats</string>
    <string name="bm_leitner_subtitle" translatable="true">(long-term memory builder)</string>
    <string name="bm_flashcard_subtitle" translatable="true">(short-term memory builder)</string>
    <string name="bm_stats_subtitle" translatable="true">(flashcard and leitner statistics)</string>

    <!-- Navigation Menu Names -->
    <string name="nav_detail_item01" translatable="false">@string/info</string>
    <string name="nav_detail_item02" translatable="false">@string/school</string>
    <string name="nav_detail_item03" translatable="false">@string/flashcards</string>


    <!-- EmptyList Messages -->
    <string name="emptyList_deck" translatable="true">No Decks</string>
    <string name="emptyList_flashcard" translatable="true">No Flashcards</string>

    <!-- Tutorial Names -->
    <string name="tutorial_start" translatable="false">Getting Started</string>
    <string name="tutorial_deck" translatable="false">Creating a Deck </string>
    <string name="tutorial_settings" translatable="false">Modify Settings</string>
    <string name="tutorial_leitner" translatable="false">The Leitner Method</string>


    <!-- Message values -->
    <string name="msg_no_network" translatable="true">No network connection! Please check your settings.</string>
    <string name="msg_click_start" translatable="true">Click to Start</string>
    <string name="msg_loading_flashcards" translatable="true">Loading flashcards...</string>
    <string name="msg_add_description" translatable="true">Add Description</string>
    <string name="msg_none" translatable="true">none</string>

    <!-- Input Error Messages -->
    <string name="msg_invalid_character" translatable="true">Invalid Character</string>
    <string name="msg_exceed_max" translatable="true">Exceed Maximum Characters</string>
    <string name="msg_invalid_blank" translatable="true">cannot be blank</string>
    <string name="msg_already_exists" translatable="true">already exists</string>

    <!-- Tag messages -->
    <string name="msg_no_tags" translatable="true">- No Tags -</string>
    <string name="msg_tag_blank" translatable="true">Tag is blank</string>
    <string name="msg_tag_duplicate" translatable="true">Duplicate tag</string>
    <string name="msg_tag_add" translatable="true">Add keyword tags</string>
    <string name="msg_no_defined_tags" translatable="true">No defined tags</string>


    <!-- Dictionary -->
    <string name="add" translatable="true">Add</string>
    <string name="anonymous" translatable="true">Anonymous</string>
    <string name="answer" translatable="true">Answer</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="clear" translatable="true">Clear</string>
    <string name="close" translatable="true">Close</string>
    <string name="deck" translatable="true">Deck</string>
    <string name="decks" translatable="true">Decks</string>
    <string name="delete" translatable="true">Delete</string>
    <string name="deleted" translatable="true">Deleted</string>
    <string name="description" translatable="true">Description</string>
    <string name="edit" translatable="true">Edit</string>
    <string name="flashcard" translatable="true">Flashcard</string>
    <string name="flashcards" translatable="true">Flashcards</string>
    <string name="help" translatable="true">Help</string>
    <string name="info" translatable="true">Info</string>
    <string name="last_date" translatable="true">Last Date</string>
    <string name="last_score" translatable="true">Last Score</string>
    <string name="market" translatable="true">Market</string>
    <string name="modify" translatable="true">Modify</string>
    <string name="name" translatable="true">Name</string>
    <string name="overall_score" translatable="true">Overall Score</string>
    <string name="save" translatable="true">Save</string>
    <string name="saved" translatable="true">Saved</string>
    <string name="school" translatable="true">School</string>
    <string name="stats" translatable="true">Stats</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="sign_in" translatable="true">Sign In</string>
    <string name="sign_out" translatable="true">Sign Out</string>
    <string name="tags" translatable="true">Tags</string>
    <string name="tutorials" translatable="true">Tutorials</string>
    <string name="update" translatable="true">Update</string>


</resources>
