<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/dwr_group_top"
        android:checkableBehavior="single">

        <item android:id="@+id/menu_dwr_menu01"
            android:icon="@drawable/ic_local_offer_black_36dp"
            android:title="@string/decks"/>

        <item android:id="@+id/menu_dwr_menu02"
            android:icon="@drawable/ic_store_black_36dp"
            android:title="@string/market"/>

        <item android:id="@+id/menu_dwr_menu03"
            android:icon="@drawable/ic_local_library_black_36dp"
            android:title="@string/tutorials"/>

        <item android:id="@+id/menu_dwr_menu04"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/settings"/>

    </group>


    <group android:id="@+id/dwr_group_bottom"
        android:checkableBehavior="single">

        <item android:id="@+id/menu_dwr_menu05"
            android:icon="@drawable/ic_help_outline_black_36dp"
            android:title="@string/help"/>

        <item android:id="@+id/menu_dwr_menu06"
            android:icon="@drawable/ic_cancel_black_36dp"
            android:title="@string/sign_out"/>

    </group>


</menu>