<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item01"
            android:icon="@drawable/ic_info_outline_black_36dp"
            android:title="@string/nav_detail_item01"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_item02"
            android:icon="@drawable/ic_school_black_36dp"
            android:title="@string/nav_detail_item02"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_item03"
            android:icon="@drawable/ic_style_black_36dp"
            android:title="@string/nav_detail_item03"
            android:checkable="true"/>
    </group>

</menu>