<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/choiceCoordinator"
    style="@style/Elephant.Coordinator">

    <include layout="@layout/toolbar"/>

    <TextView android:id="@+id/tutorial_txtTitle"
        android:text="@string/tutorials"
        style="@style/Elephant.TextView.MainTitle"/>


    <LinearLayout android:id="@+id/tutorial_linMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >


        <LinearLayout android:id="@+id/tutorial_linTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/tutorial_crdStart"
                android:layout_marginEnd="@dimen/tutorial_cardView_marginSpacer"
                card_view:cardCornerRadius="@dimen/tutorial_cardView_cardCornerRadius"
                card_view:cardBackgroundColor="@color/cardColor_default"
                style="@style/Elephant.CardView.Display">

                <ImageView
                    android:background="@drawable/ic_local_library_black_36dp"
                    style="@style/Elephant.ImageView.CardImage"/>

                <TextView android:id="@+id/tutorial_txtStart"
                    android:text="@string/tutorial_start"
                    style="@style/Elephant.TextView.CardTitle"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tutorial_crdDeck"
                android:layout_marginStart="@dimen/tutorial_cardView_marginSpacer"
                card_view:cardCornerRadius="@dimen/tutorial_cardView_cardCornerRadius"
                card_view:cardBackgroundColor="@color/cardColor_default"
                style="@style/Elephant.CardView.Display">

                <ImageView
                    android:background="@drawable/ic_local_offer_black_36dp"
                    style="@style/Elephant.ImageView.CardImage"/>

                <TextView android:id="@+id/tutorial_txtCreate"
                    android:text="@string/tutorial_deck"
                    style="@style/Elephant.TextView.CardTitle"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout android:id="@+id/tutorial_linBottom"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/tutorial_crdSettings"
                android:layout_marginEnd="@dimen/tutorial_cardView_marginSpacer"
                card_view:cardCornerRadius="@dimen/tutorial_cardView_cardCornerRadius"
                card_view:cardBackgroundColor="@color/cardColor_default"
                style="@style/Elephant.CardView.Display">

                <ImageView
                    android:background="@drawable/ic_settings_black_36dp"
                    style="@style/Elephant.ImageView.CardImage"/>

                <TextView android:id="@+id/tutorial_txtSettings"
                    android:text="@string/tutorial_settings"
                    style="@style/Elephant.TextView.CardTitle"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tutorial_crdLeitner"
                android:layout_marginStart="@dimen/tutorial_cardView_marginSpacer"
                card_view:cardCornerRadius="@dimen/tutorial_cardView_cardCornerRadius"
                card_view:cardBackgroundColor="@color/cardColor_default"
                style="@style/Elephant.CardView.Display">

                <ImageView
                    android:background="@drawable/ic_archive_black_36dp"
                    style="@style/Elephant.ImageView.CardImage"/>

                <TextView android:id="@+id/tutorial_txtLeitner"
                    android:text="@string/tutorial_leitner"
                    style="@style/Elephant.TextView.CardTitle"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>